--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='mystyle.css') }}">
    <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -204,7 +204,7 @@
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -399,7 +399,7 @@ nutrition.png" alt="San Francisco" width="400" height="300">
         <div class="panel-footer">
           <h3>£10.99</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <a href="/home"><button class="btn btn-lg">Sign Up</button></a>
         </div>
       </div>      
     </div>     
@@ -417,7 +417,7 @@ nutrition.png" alt="San Francisco" width="400" height="300">
         <div class="panel-footer">
           <h3>£15.99</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+           <a href="/home"><button class="btn btn-lg">Sign Up</button></a>
         </div>
       </div>      
     </div>       
@@ -437,7 +437,7 @@ nutrition.png" alt="San Francisco" width="400" height="300">
         <div class="panel-footer">
           <h3>£19.99</h3>
           <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+           <a href="/home"><button class="btn btn-lg">Sign Up</button></a>
         </div>
       </div>      
     </div>    
